# hypha

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
.moss/: index.sqlite
crates/interconnect-core/src/: authority.rs  lib.rs  wire.rs
docs/: architecture.md  import-policies.md  index.md  introduction.md  package.json  protocol.md  security.md
docs/.vitepress/: config.ts
examples/chat/: Cargo.toml
examples/chat/src/: protocol.rs  server.rs
